@@ -28,6 +28,8 @@ apport (0.91) UNRELEASED; urgency=low
   * apport/ui.py, run_report_bug(): Do not crash if the target process runs as
     a different user. Print a proper error message instead. Add test case
     test_run_report_bug_noperm_pid(). (LP: #121121)
+  * apport/fileutils.py, likely_packaged(): Ignore /var/lib/schroot. Add test
+    case. (LP: #122859)
 
   Merge the fedora branch, thanks a lot to Will Woods wwoods@redhat.com>:
 
@@ -45,7 +47,7 @@ apport (0.91) UNRELEASED; urgency=low
   * crashdb.conf: Add stanzas for Fedora and a 'debug' database which uses the
     'memory' crashdb implementation.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 14 Jul 2007 13:20:30 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 14 Jul 2007 13:26:43 +0100
 
 apport (0.90) gutsy; urgency=low
 
